first full commit

--- a/test-embed.html
+++ b/test-embed.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,42 +13,50 @@
             padding: 20px;
             background: #f5f5f5;
         }
+
         h1 {
             color: #333;
         }
+
         .test-section {
             background: white;
             padding: 20px;
             margin: 20px 0;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
         .test-section h2 {
             margin-top: 0;
             color: #BB86FC;
         }
+
         iframe {
             border: 2px solid #BB86FC;
             border-radius: 8px;
             display: block;
             margin: 20px 0;
         }
+
         .note {
             background: #fffbea;
             padding: 15px;
             border-left: 4px solid #f59e0b;
             margin: 10px 0;
         }
+
         .success {
             background: #ecfdf5;
             border-left-color: #10b981;
         }
+
         code {
             background: #f3f4f6;
             padding: 2px 6px;
             border-radius: 4px;
             font-family: 'Courier New', monospace;
         }
+
         pre {
             background: #1f2937;
             color: #10b981;
@@ -57,9 +66,10 @@
         }
     </style>
 </head>
+
 <body>
     <h1>🎧 Podcast Player - Embed Test Page</h1>
-    
+
     <div class="note success">
         <strong>✅ This page tests the player in an embedded (iframe) context</strong><br>
         If you can see the player below and it loads podcasts without errors, your embed system is working perfectly!
@@ -69,12 +79,7 @@
     <div class="test-section">
         <h2>Test 1: Basic Player Embed</h2>
         <p>Player with default settings (first podcast loaded):</p>
-        <iframe 
-            src="http://localhost:8000" 
-            width="100%" 
-            height="650" 
-            frameborder="0"
-            allowfullscreen>
+        <iframe src="http://localhost:8000" width="100%" height="650" frameborder="0" allowfullscreen>
         </iframe>
         <pre>&lt;iframe src="http://localhost:8000" width="100%" height="650"&gt;&lt;/iframe&gt;</pre>
     </div>
@@ -83,11 +88,7 @@
     <div class="test-section">
         <h2>Test 2: Specific Podcast & Episode</h2>
         <p>Player loading podcast #0, episode #2:</p>
-        <iframe 
-            src="http://localhost:8000?podcast=0&episode=2" 
-            width="100%" 
-            height="650" 
-            frameborder="0">
+        <iframe src="http://localhost:8000?podcast=0&episode=2" width="100%" height="650" frameborder="0">
         </iframe>
         <pre>&lt;iframe src="http://localhost:8000?podcast=0&episode=2" width="100%" height="650"&gt;&lt;/iframe&gt;</pre>
     </div>
@@ -97,9 +98,7 @@
         <h2>Test 3: Responsive Embed (16:9 ratio)</h2>
         <p>Player that maintains aspect ratio:</p>
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-            <iframe 
-                src="http://localhost:8000" 
-                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+            <iframe src="http://localhost:8000" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
                 frameborder="0">
             </iframe>
         </div>
@@ -115,11 +114,7 @@
         <h2>Test 4: Compact Embed (400px width)</h2>
         <p>Player in a smaller container:</p>
         <div style="max-width: 400px;">
-            <iframe 
-                src="http://localhost:8000" 
-                width="100%" 
-                height="700" 
-                frameborder="0">
+            <iframe src="http://localhost:8000" width="100%" height="700" frameborder="0">
             </iframe>
         </div>
         <pre>&lt;iframe src="http://localhost:8000" width="400" height="700"&gt;&lt;/iframe&gt;</pre>
@@ -154,4 +149,5 @@
         });
     </script>
 </body>
+
 </html>
