--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Inter:wght@400;500;600&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <!-- Header -->
         <header class="app-header">
             <h1 class="app-title">
-                <span class="material-symbols-outlined">podcasts</span>
+                <i class="fa-solid fa-podcast"></i>
                 Podcast Player
             </h1>
         </header>
@@ -82,19 +83,19 @@
                             <!-- Skip Backward -->
                             <button id="skip-backward" class="control-btn" aria-label="Skip backward 15 seconds"
                                 title="Skip backward 15s">
-                                <span class="material-symbols-outlined">replay_10</span>
+                                <i class="fa-solid fa-rotate-left"></i>
                             </button>
 
                             <!-- Play/Pause -->
                             <button id="play-pause" class="control-btn control-btn-primary" aria-label="Play"
                                 title="Play/Pause">
-                                <span class="material-symbols-outlined" id="play-icon">play_arrow</span>
+                                <i class="fa-solid fa-circle-play" id="play-icon"></i>
                             </button>
 
                             <!-- Skip Forward -->
                             <button id="skip-forward" class="control-btn" aria-label="Skip forward 30 seconds"
                                 title="Skip forward 30s">
-                                <span class="material-symbols-outlined">forward_30</span>
+                                <i class="fa-solid fa-rotate-right"></i>
                             </button>
                         </div>
 
@@ -118,7 +119,7 @@
                             <!-- Volume Control -->
                             <div class="volume-control">
                                 <button id="volume-btn" class="control-btn" aria-label="Volume" title="Volume">
-                                    <span class="material-symbols-outlined" id="volume-icon">volume_up</span>
+                                    <i class="fa-solid fa-volume-high" id="volume-icon"></i>
                                 </button>
                                 <div class="volume-slider-container">
                                     <input type="range" id="volume-slider" class="volume-slider" min="0" max="100"
@@ -129,7 +130,7 @@
                             <!-- Download -->
                             <button id="download-btn" class="control-btn" aria-label="Download episode"
                                 title="Download episode" disabled>
-                                <span class="material-symbols-outlined">download</span>
+                                <i class="fa-solid fa-download"></i>
                             </button>
                         </div>
                     </div>
@@ -138,10 +139,13 @@
 
             <!-- Episodes List -->
             <section class="episodes-section">
-                <h3 class="section-title">Episodes</h3>
+                <h3 class="section-title">
+                    <i class="fa-solid fa-list"></i>
+                    Episodes
+                </h3>
                 <div id="episodes-list" class="episodes-list">
                     <div class="empty-state">
-                        <span class="material-symbols-outlined">library_music</span>
+                        <i class="fa-solid fa-music"></i>
                         <p>Select a podcast to view episodes</p>
                     </div>
                 </div>
@@ -150,7 +154,7 @@
             <!-- Embed Section -->
             <section class="embed-section">
                 <h3 class="section-title">
-                    <span class="material-symbols-outlined">code</span>
+                    <i class="fa-solid fa-code"></i>
                     Embed Player
                 </h3>
                 <div class="embed-container">
@@ -159,12 +163,12 @@
                         <pre id="embed-code"
                             class="embed-code"><code>&lt;iframe src="about:blank" width="100%" height="600" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</code></pre>
                         <button id="copy-embed" class="copy-btn" aria-label="Copy embed code">
-                            <span class="material-symbols-outlined">content_copy</span>
+                            <i class="fa-solid fa-copy"></i>
                             <span class="copy-text">Copy</span>
                         </button>
                     </div>
                     <div id="copy-notification" class="copy-notification hidden">
-                        <span class="material-symbols-outlined">check_circle</span>
+                        <i class="fa-solid fa-circle-check"></i>
                         Copied to clipboard!
                     </div>
                 </div>
@@ -179,7 +183,7 @@
 
         <!-- Error Toast -->
         <div id="error-toast" class="error-toast hidden">
-            <span class="material-symbols-outlined">error</span>
+            <i class="fa-solid fa-circle-exclamation"></i>
             <span id="error-message"></span>
         </div>
     </div>
