--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&family=Inter:wght@400;500;600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -26,12 +29,14 @@
         <main class="main-content">
             <!-- Podcast Selector -->
             <section class="podcast-selector-section">
-                <label for="podcast-select" class="select-label">Select Podcast</label>
-                <div class="select-wrapper">
-                    <select id="podcast-select" class="podcast-select" aria-label="Select a podcast">
-                        <option value="">Loading podcasts...</option>
-                    </select>
-                    <span class="material-symbols-outlined select-icon">expand_more</span>
+                <div class="selector-container">
+                    <label for="podcast-select" class="select-label">Select Podcast:</label>
+                    <div class="select-wrapper">
+                        <select id="podcast-select" class="podcast-select" aria-label="Select a podcast">
+                            <option value="">Loading podcasts...</option>
+                        </select>
+                        <i class="fa-solid fa-chevron-down select-icon"></i>
+                    </div>
                 </div>
             </section>
 
