dark mode light mode swtiches

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <i class="fa-solid fa-podcast"></i>
                 Podcast Player
             </h1>
+            <!-- Theme Toggle -->
+            <button class="theme-toggle" id="theme-toggle" aria-label="Switch to light mode" title="Toggle theme">
+                <i class="fa-solid fa-sun theme-icon-light"></i>
+                <i class="fa-solid fa-moon theme-icon-dark"></i>
+            </button>
         </header>
 
         <!-- Main Content -->
