--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="app-container">
-        <!-- Header -->
+        <!-- STICKY HEADER -->
         <header class="app-header">
             <h1 class="app-title">
                 <i class="fa-solid fa-podcast"></i>
@@ -30,127 +30,42 @@
             </button>
         </header>
 
-        <!-- Main Content -->
+        <!-- STICKY PODCAST SELECTOR -->
+        <section class="podcast-selector-section">
+            <div class="selector-container">
+                <label class="select-label">Select Podcast:</label>
+                <div class="custom-dropdown">
+                    <div class="dropdown-selected" id="dropdown-selected">
+                        <span class="selected-text">Loading podcasts...</span>
+                        <i class="fa-solid fa-chevron-down dropdown-arrow"></i>
+                    </div>
+                    <div class="dropdown-options" id="dropdown-options">
+                        <!-- Options will be populated by JavaScript -->
+                    </div>
+                </div>
+                <!-- Keep original select hidden for form compatibility -->
+                <select id="podcast-select" class="podcast-select-hidden" aria-label="Select a podcast"
+                    style="display: none;">
+                    <option value="">Loading podcasts...</option>
+                </select>
+            </div>
+        </section>
+
+        <!-- SCROLLABLE CONTENT CONTAINER -->
         <main class="main-content">
-            <!-- Podcast Selector -->
-            <section class="podcast-selector-section">
-                <div class="selector-container">
-                    <label class="select-label">Select Podcast:</label>
-                    <div class="custom-dropdown">
-                        <div class="dropdown-selected" id="dropdown-selected">
-                            <span class="selected-text">Loading podcasts...</span>
-                            <i class="fa-solid fa-chevron-down dropdown-arrow"></i>
-                        </div>
-                        <div class="dropdown-options" id="dropdown-options">
-                            <!-- Options will be populated by JavaScript -->
-                        </div>
-                    </div>
-                    <!-- Keep original select hidden for form compatibility -->
-                    <select id="podcast-select" class="podcast-select-hidden" aria-label="Select a podcast"
-                        style="display: none;">
-                        <option value="">Loading podcasts...</option>
-                    </select>
-                </div>
-            </section>
-
-            <!-- Player Section -->
-            <section class="player-section">
-                <!-- Cover Art & Metadata -->
-                <div class="player-main">
-                    <div class="cover-art-container">
-                        <img id="cover-art" src="" alt="Podcast cover" class="cover-art">
-                        <div class="cover-art-placeholder">
-                            <span class="material-symbols-outlined">album</span>
-                        </div>
-                    </div>
-
-                    <div class="metadata-container">
-                        <h2 id="episode-title" class="episode-title">Select a podcast to begin</h2>
-                        <div class="metadata-details">
-                            <span id="podcast-title" class="podcast-name">—</span>
-                            <span class="metadata-separator">•</span>
-                            <span id="episode-date" class="episode-date">—</span>
-                        </div>
-                        <div class="metadata-stats">
-                            <span id="episode-count" class="episode-count">—</span>
-                        </div>
+            <!-- Podcast Info Section (Cover + Metadata) -->
+            <section class="podcast-info-section">
+                <div class="cover-art-container">
+                    <img id="cover-art" src="" alt="Podcast cover" class="cover-art">
+                    <div class="cover-art-placeholder">
+                        <i class="fa-solid fa-podcast"></i>
                     </div>
                 </div>
 
-                <!-- Audio Player -->
-                <div class="audio-player">
-                    <audio id="audio-element" preload="metadata"></audio>
-
-                    <!-- Progress Bar -->
-                    <div class="progress-container">
-                        <div class="progress-bar">
-                            <div id="progress-filled" class="progress-filled"></div>
-                            <div id="progress-buffered" class="progress-buffered"></div>
-                            <input type="range" id="progress-slider" class="progress-slider" min="0" max="100" value="0"
-                                step="0.1" aria-label="Seek audio">
-                        </div>
-                        <div class="time-display">
-                            <span id="current-time" class="time">0:00</span>
-                            <span id="duration-time" class="time">0:00</span>
-                        </div>
-                    </div>
-
-                    <!-- Controls -->
-                    <div class="player-controls">
-                        <div class="controls-left">
-                            <!-- Skip Backward -->
-                            <button id="skip-backward" class="control-btn" aria-label="Skip backward 15 seconds"
-                                title="Skip backward 15s">
-                                <i class="fa-solid fa-rotate-left"></i>
-                            </button>
-
-                            <!-- Play/Pause -->
-                            <button id="play-pause" class="control-btn control-btn-primary" aria-label="Play"
-                                title="Play/Pause">
-                                <i class="fa-solid fa-circle-play" id="play-icon"></i>
-                            </button>
-
-                            <!-- Skip Forward -->
-                            <button id="skip-forward" class="control-btn" aria-label="Skip forward 30 seconds"
-                                title="Skip forward 30s">
-                                <i class="fa-solid fa-rotate-right"></i>
-                            </button>
-                        </div>
-
-                        <div class="controls-right">
-                            <!-- Playback Speed -->
-                            <div class="speed-control">
-                                <button id="speed-btn" class="control-btn control-btn-small" aria-label="Playback speed"
-                                    title="Playback speed">
-                                    <span class="speed-text">1x</span>
-                                </button>
-                                <div id="speed-menu" class="speed-menu hidden">
-                                    <button class="speed-option" data-speed="0.5">0.5x</button>
-                                    <button class="speed-option" data-speed="0.75">0.75x</button>
-                                    <button class="speed-option active" data-speed="1">1x</button>
-                                    <button class="speed-option" data-speed="1.25">1.25x</button>
-                                    <button class="speed-option" data-speed="1.5">1.5x</button>
-                                    <button class="speed-option" data-speed="2">2x</button>
-                                </div>
-                            </div>
-
-                            <!-- Volume Control -->
-                            <div class="volume-control">
-                                <button id="volume-btn" class="control-btn" aria-label="Volume" title="Volume">
-                                    <i class="fa-solid fa-volume-high" id="volume-icon"></i>
-                                </button>
-                                <div class="volume-slider-container">
-                                    <input type="range" id="volume-slider" class="volume-slider" min="0" max="100"
-                                        value="100" step="1" aria-label="Volume level">
-                                </div>
-                            </div>
-
-                            <!-- Download -->
-                            <button id="download-btn" class="control-btn" aria-label="Download episode"
-                                title="Download episode" disabled>
-                                <i class="fa-solid fa-download"></i>
-                            </button>
-                        </div>
+                <div class="metadata-container">
+                    <h2 id="podcast-title" class="podcast-title">Select a podcast to begin</h2>
+                    <div class="metadata-details">
+                        <span id="episode-count" class="episode-count">—</span>
                     </div>
                 </div>
             </section>
@@ -192,6 +107,93 @@
                 </div>
             </section>
         </main>
+
+        <!-- Player Modal Overlay -->
+        <div id="player-modal" class="player-modal">
+            <div class="player-bar">
+                <!-- Close Button -->
+                <button id="modal-close-btn" class="player-close-btn" aria-label="Close player" title="Close player">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+
+                <!-- Episode Info -->
+                <div class="player-info">
+                    <div class="player-title" id="player-title">Select an episode to play</div>
+                    <div class="player-podcast" id="player-podcast">—</div>
+                </div>
+
+                <!-- Audio Element -->
+                <audio id="audio-element" preload="metadata"></audio>
+
+                <!-- Progress Bar -->
+                <div class="player-progress-container">
+                    <div class="progress-bar">
+                        <div id="progress-filled" class="progress-filled"></div>
+                        <div id="progress-buffered" class="progress-buffered"></div>
+                        <input type="range" id="progress-slider" class="progress-slider" min="0" max="100" value="0"
+                            step="0.1" aria-label="Seek audio">
+                    </div>
+                    <div class="time-display">
+                        <span id="current-time" class="time">0:00</span>
+                        <span id="duration-time" class="time">0:00</span>
+                    </div>
+                </div>
+
+                <!-- Player Controls -->
+                <div class="player-controls-compact">
+                    <!-- Skip Backward -->
+                    <button id="skip-backward" class="control-btn control-btn-compact" aria-label="Skip backward 15s"
+                        title="-15s">
+                        <i class="fa-solid fa-rotate-left"></i>
+                    </button>
+
+                    <!-- Play/Pause -->
+                    <button id="play-pause" class="control-btn control-btn-play" aria-label="Play" title="Play/Pause">
+                        <i class="fa-solid fa-circle-play" id="play-icon"></i>
+                    </button>
+
+                    <!-- Skip Forward -->
+                    <button id="skip-forward" class="control-btn control-btn-compact" aria-label="Skip forward 30s"
+                        title="+30s">
+                        <i class="fa-solid fa-rotate-right"></i>
+                    </button>
+
+                    <!-- Speed -->
+                    <div class="speed-control-compact">
+                        <button id="speed-btn" class="control-btn control-btn-compact" aria-label="Playback speed"
+                            title="Speed">
+                            <span class="speed-text">1x</span>
+                        </button>
+                        <div id="speed-menu" class="speed-menu hidden">
+                            <button class="speed-option" data-speed="0.5">0.5x</button>
+                            <button class="speed-option" data-speed="0.75">0.75x</button>
+                            <button class="speed-option active" data-speed="1">1x</button>
+                            <button class="speed-option" data-speed="1.25">1.25x</button>
+                            <button class="speed-option" data-speed="1.5">1.5x</button>
+                            <button class="speed-option" data-speed="2">2x</button>
+                        </div>
+                    </div>
+
+                    <!-- Volume -->
+                    <button id="volume-btn" class="control-btn control-btn-compact" aria-label="Volume"
+                        title="Mute/Unmute">
+                        <i class="fa-solid fa-volume-high" id="volume-icon"></i>
+                    </button>
+
+                    <!-- Volume Slider (appears on hover) -->
+                    <div class="volume-slider-popup">
+                        <input type="range" id="volume-slider" class="volume-slider" min="0" max="100" value="100"
+                            step="1" aria-label="Volume level">
+                    </div>
+
+                    <!-- Download -->
+                    <button id="download-btn" class="control-btn control-btn-compact" aria-label="Download"
+                        title="Download episode" disabled>
+                        <i class="fa-solid fa-download"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
 
         <!-- Loading Overlay -->
         <div id="loading-overlay" class="loading-overlay">
