--- a/test-embed.html
+++ b/test-embed.html
@@ -5,69 +5,165 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podcast Player Embed Test</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        :root {
+            /* Dark Mode (Default) */
+            --primary: #BB86FC;
+            --background: #0A0A0A;
+            --surface: #151515;
+            --surface-elevated: #1E1E1E;
+            --border: rgba(255, 255, 255, 0.08);
+            --text-primary: #FFFFFF;
+            --text-secondary: rgba(255, 255, 255, 0.7);
+            --text-tertiary: rgba(255, 255, 255, 0.5);
+            --shadow-sm: 0 2px 4px rgba(0, 0, 0, 0.3);
+            --shadow-md: 0 4px 12px rgba(0, 0, 0, 0.4);
+            --transition: 200ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        [data-theme="light"] {
+            /* Light Mode Colors */
+            --primary: #6750A4;
+            --background: #FDFCFF;
+            --surface: #F7F4FA;
+            --surface-elevated: #FFFFFF;
+            --border: rgba(103, 80, 164, 0.12);
+            --text-primary: #1C1B1F;
+            --text-secondary: #49454F;
+            --text-tertiary: #79747E;
+            --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.12);
+            --shadow-md: 0 4px 8px rgba(0, 0, 0, 0.10);
+        }
+
         body {
             font-family: Arial, sans-serif;
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background: #f5f5f5;
+            background: var(--background);
+            color: var(--text-primary);
+            transition: background var(--transition), color var(--transition);
         }
 
         h1 {
-            color: #333;
+            color: var(--text-primary);
+            position: relative;
+            padding-right: 80px;
+        }
+
+        .theme-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 8px;
+            background: var(--surface-elevated);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            cursor: pointer;
+            transition: all var(--transition);
+            box-shadow: var(--shadow-sm);
+        }
+
+        .theme-toggle:hover {
+            background: var(--surface);
+            border-color: var(--primary);
+            box-shadow: var(--shadow-md);
+            transform: scale(1.05);
+        }
+
+        .theme-toggle:active {
+            transform: scale(0.98);
+        }
+
+        .theme-icon-light,
+        .theme-icon-dark {
+            font-size: 18px;
+            transition: all var(--transition);
+            color: var(--text-tertiary);
+        }
+
+        [data-theme="dark"] .theme-icon-dark,
+        [data-theme="light"] .theme-icon-light {
+            color: var(--primary);
+            transform: scale(1.15);
+        }
+
+        [data-theme="dark"] .theme-icon-light,
+        [data-theme="light"] .theme-icon-dark {
+            color: var(--text-tertiary);
+            opacity: 0.5;
         }
 
         .test-section {
-            background: white;
+            background: var(--surface-elevated);
             padding: 20px;
             margin: 20px 0;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: var(--shadow-md);
+            transition: background var(--transition), box-shadow var(--transition);
         }
 
         .test-section h2 {
             margin-top: 0;
-            color: #BB86FC;
+            color: var(--primary);
+        }
+
+        .test-section p {
+            color: var(--text-secondary);
         }
 
         iframe {
-            border: 2px solid #BB86FC;
+            border: 2px solid var(--primary);
             border-radius: 8px;
             display: block;
             margin: 20px 0;
         }
 
         .note {
-            background: #fffbea;
+            background: var(--surface);
             padding: 15px;
             border-left: 4px solid #f59e0b;
             margin: 10px 0;
+            border-radius: 4px;
+            color: var(--text-primary);
         }
 
         .success {
-            background: #ecfdf5;
             border-left-color: #10b981;
         }
 
         code {
-            background: #f3f4f6;
+            background: var(--surface);
             padding: 2px 6px;
             border-radius: 4px;
             font-family: 'Courier New', monospace;
+            color: var(--primary);
         }
 
         pre {
-            background: #1f2937;
+            background: var(--surface);
             color: #10b981;
             padding: 15px;
             border-radius: 4px;
             overflow-x: auto;
+            border: 1px solid var(--border);
         }
     </style>
 </head>
 
 <body>
+    <!-- Theme Toggle -->
+    <button class="theme-toggle" id="theme-toggle" aria-label="Switch to light mode" title="Toggle theme">
+        <i class="fa-solid fa-sun theme-icon-light"></i>
+        <i class="fa-solid fa-moon theme-icon-dark"></i>
+    </button>
+
     <h1>🎧 Podcast Player - Embed Test Page</h1>
 
     <div class="note success">
@@ -141,6 +237,38 @@
     </div>
 
     <script>
+        // Theme Management
+        const THEME_KEY = 'podcast-embed-test-theme';
+
+        function initTheme() {
+            const savedTheme = localStorage.getItem(THEME_KEY) || 'dark';
+            document.documentElement.setAttribute('data-theme', savedTheme);
+            updateThemeToggle(savedTheme);
+        }
+
+        function toggleTheme() {
+            const current = document.documentElement.getAttribute('data-theme') || 'dark';
+            const next = current === 'dark' ? 'light' : 'dark';
+            document.documentElement.setAttribute('data-theme', next);
+            localStorage.setItem(THEME_KEY, next);
+            updateThemeToggle(next);
+        }
+
+        function updateThemeToggle(theme) {
+            const toggle = document.getElementById('theme-toggle');
+            if (!toggle) return;
+
+            const label = theme === 'dark' ? 'Switch to light mode' : 'Switch to dark mode';
+            toggle.setAttribute('aria-label', label);
+            toggle.setAttribute('title', label);
+        }
+
+        // Initialize theme on load
+        initTheme();
+
+        // Add theme toggle event listener
+        document.getElementById('theme-toggle').addEventListener('click', toggleTheme);
+
         // Log when iframes load
         document.querySelectorAll('iframe').forEach((iframe, index) => {
             iframe.addEventListener('load', () => {
