back on track with more work to do. fixed modal

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div id="player-modal" class="player-modal">
             <div class="player-bar">
                 <!-- Close Button -->
-                <button id="modal-close-btn" class="player-close-btn" aria-label="Close player" title="Close player">
+                <button id="player-close-btn" class="player-close-btn" aria-label="Close player" title="Close player">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
 
