--- a/test-embed.html
+++ b/test-embed.html
@@ -175,18 +175,18 @@
     <div class="test-section">
         <h2>Test 1: Basic Player Embed</h2>
         <p>Player with default settings (first podcast loaded):</p>
-        <iframe src="http://localhost:8000" width="100%" height="650" frameborder="0" allowfullscreen>
+        <iframe src="http://localhost:8000?embed=true" width="100%" height="600" frameborder="0" allowfullscreen>
         </iframe>
-        <pre>&lt;iframe src="http://localhost:8000" width="100%" height="650"&gt;&lt;/iframe&gt;</pre>
+        <pre>&lt;iframe src="http://localhost:8000?embed=true" width="100%" height="600"&gt;&lt;/iframe&gt;</pre>
     </div>
 
     <!-- Test 2: With Parameters -->
     <div class="test-section">
         <h2>Test 2: Specific Podcast & Episode</h2>
         <p>Player loading podcast #0, episode #2:</p>
-        <iframe src="http://localhost:8000?podcast=0&episode=2" width="100%" height="650" frameborder="0">
+        <iframe src="http://localhost:8000?embed=true&podcast=0&episode=2" width="100%" height="600" frameborder="0">
         </iframe>
-        <pre>&lt;iframe src="http://localhost:8000?podcast=0&episode=2" width="100%" height="650"&gt;&lt;/iframe&gt;</pre>
+        <pre>&lt;iframe src="http://localhost:8000?embed=true&podcast=0&episode=2" width="100%" height="600"&gt;&lt;/iframe&gt;</pre>
     </div>
 
     <!-- Test 3: Responsive Embed -->
@@ -194,12 +194,12 @@
         <h2>Test 3: Responsive Embed (16:9 ratio)</h2>
         <p>Player that maintains aspect ratio:</p>
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-            <iframe src="http://localhost:8000" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                frameborder="0">
+            <iframe src="http://localhost:8000?embed=true"
+                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0">
             </iframe>
         </div>
         <pre>&lt;div style="position: relative; padding-bottom: 56.25%; height: 0;"&gt;
-    &lt;iframe src="http://localhost:8000" 
+    &lt;iframe src="http://localhost:8000?embed=true" 
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"&gt;
     &lt;/iframe&gt;
 &lt;/div&gt;</pre>
@@ -210,10 +210,10 @@
         <h2>Test 4: Compact Embed (400px width)</h2>
         <p>Player in a smaller container:</p>
         <div style="max-width: 400px;">
-            <iframe src="http://localhost:8000" width="100%" height="700" frameborder="0">
+            <iframe src="http://localhost:8000?embed=true" width="100%" height="650" frameborder="0">
             </iframe>
         </div>
-        <pre>&lt;iframe src="http://localhost:8000" width="400" height="700"&gt;&lt;/iframe&gt;</pre>
+        <pre>&lt;iframe src="http://localhost:8000?embed=true" width="400" height="650"&gt;&lt;/iframe&gt;</pre>
     </div>
 
     <div class="note">
