stling changes to modal player

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 
                     <!-- Play/Pause -->
                     <button id="play-pause" class="control-btn control-btn-play" aria-label="Play" title="Play/Pause">
-                        <i class="fa-solid fa-circle-play" id="play-icon"></i>
+                        <i class="fa-solid fa-play"></i>
+                        <i class="fa-solid fa-pause" style="display: none;"></i>
                     </button>
 
                     <!-- Skip Forward -->
