working well controls!!

--- a/iframe-generator.html
+++ b/iframe-generator.html
@@ -114,6 +114,22 @@
                                     <span class="material-icons select-arrow">expand_more</span>
                                 </div>
                             </div>
+
+                            <div class="input-field">
+                                <label class="input-label">Podcast Dropdown Order</label>
+                                <div class="select-wrapper">
+                                    <select id="podcast-dropdown-order" class="modern-select">
+                                        <option value="feed">Feed Order (Default)</option>
+                                        <option value="alphabetical">Alphabetical A-Z</option>
+                                        <option value="alphabetical-desc">Alphabetical Z-A</option>
+                                        <option value="episode-count">Most Episodes First</option>
+                                        <option value="episode-count-desc">Least Episodes First</option>
+                                        <option value="latest-date">Latest Content First</option>
+                                        <option value="oldest-date">Oldest Content First</option>
+                                    </select>
+                                    <span class="material-icons select-arrow">expand_more</span>
+                                </div>
+                            </div>
                         </div>
                     </section>
 
