--- a/iframe-generator.html
+++ b/iframe-generator.html
@@ -17,11 +17,16 @@
         <!-- Header -->
         <header class="header">
             <div class="header-content">
-                <h1 class="header-title">
-                    <span class="material-icons">podcasts</span>
-                    Podcast Player Embed Generator
-                </h1>
-                <p class="header-subtitle">Create custom iframe embeds with real-time preview</p>
+                <div class="header-left">
+                    <h1 class="header-title">
+                        <span class="material-icons">podcasts</span>
+                        Podcast Player Embed Generator
+                    </h1>
+                    <p class="header-subtitle">Create custom iframe embeds with real-time preview</p>
+                </div>
+                <button class="theme-toggle" id="theme-toggle" aria-label="Switch to light mode" title="Toggle theme">
+                    <span class="material-icons">dark_mode</span>
+                </button>
             </div>
         </header>
 
